--- a/package.json
+++ b/package.json
@@ -19,11 +19,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mssql": "^8.1.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.3.3",
-    "process": "^0.11.10",
-    "util.promisify": "^1.1.1"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
